# ChangeLog for dev-lang/ruby-enterprise
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  24 Jun 2009; Lance Albertson <ramereth@gentoo.org> ChangeLog:
  Version bump, remove openssl patch as it appears to have been applied upstream

  25 Feb 2009; Lance Albertson <ramereth@gentoo.org>
  ruby-enterprise-1.8.6.20090201.ebuild:
  * Refactored compiling with the tcmalloc library * Add nasty temp hack to
  get around gem installs on Gentoo

  23 Feb 2009; Lance Albertson <ramereth@gentoo.org>
  +files/ruby-enterprise-1.8.6-20090201-libdir.patch,
  +files/ruby-enterprise-1.8.6-20090201-mkconfig.patch,
  ruby-enterprise-1.8.6.20090201.ebuild:
  Change ebuild to use "ee" suffix so that it installs along side ruby
  proper sanely

*ruby-enterprise-1.8.6.20090201 (18 Feb 2009)

  18 Feb 2009; Lance Albertson <ramereth@gentoo.org>
  +files/ruby-enterprise-1.8.6-20090201-openssl.patch,
  +ruby-enterprise-1.8.6.20090201.ebuild:
  Several fixes and improvements, and version bump
    * Installs as system ruby and blocks dev-lang/ruby
    * Added optional tcmalloc support
    * Aligned with dev-lang/ruby with how it installs

  22 Jan 2009; Alex Legler <a3li@gentoo.org> +files/openssl.patch,
  +ruby-enterprise-1.8.6.20081205-r1.ebuild:
  Revbump to include openssl patch

  21 Dec 2008; Sergio D. Rodriguez Inclan (ZeRoX) <srinclan@gmail.com>
  ChangeLog:
  Added ~x86 keyword.

  11 Dec 2008; Alex Legler <gentoo@a3li.info>
  ruby-enterprise-1.8.6.20081205.ebuild:
  Removing double whitespace and DEPENDing on eselect-ruby

  10 Dec 2008; Alex Legler <gentoo@a3li.info> +files/libdir.patch,
  +files/mkconfig.patch, +ruby-enterprise-1.8.6.20081205.ebuild:
  Initial ebuild, done by myself.
