@@ -1,10 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX ruby-enterprise-1.8.6-20090201-libdir.patch 812 RMD160 f94e10be81e16ba2d38f516ccab31071692f4976 SHA1 90a35d2410d1b57a4d3e848b4ebc42fe89192318 SHA256 25660ce2862869c5f78642681a3e37b09f5eda1642fe738db2351843840081d0
 AUX ruby-enterprise-1.8.6-20090201-mkconfig.patch 521 RMD160 8abf30f7d4d9ecd25b31e60ec6e9355efcadaf99 SHA1 95512c34968e3bf825ca4af2e8a3b56eae2dc856 SHA256 e1d2174992dcc8c85a46b8d00c7e4649383ffea1cfcd405dea0d5578f78cca6f
 AUX ruby-enterprise-1.8.6-20090201-openssl.patch 4892 RMD160 7ffca1f0d339c60f3a4d1cd452c78eace3bd1f62 SHA1 d5279868d614cfeb2e0eba984096096515baafe0 SHA256 ad98b05dc7a2ba9ac5fac21094660c919a987222db19ff5f8bad8e16ae1a6f49
 AUX ruby-enterprise-1.8.6-20090610-libdir.patch 812 RMD160 f94e10be81e16ba2d38f516ccab31071692f4976 SHA1 90a35d2410d1b57a4d3e848b4ebc42fe89192318 SHA256 25660ce2862869c5f78642681a3e37b09f5eda1642fe738db2351843840081d0
 AUX ruby-enterprise-1.8.6-20090610-mkconfig.patch 521 RMD160 8abf30f7d4d9ecd25b31e60ec6e9355efcadaf99 SHA1 95512c34968e3bf825ca4af2e8a3b56eae2dc856 SHA256 e1d2174992dcc8c85a46b8d00c7e4649383ffea1cfcd405dea0d5578f78cca6f
-DIST ruby-enterprise-1.8.6-20090201.tar.gz 7119913 RMD160 efa65a65624e245cb7f8d783aa58e4f2bc64f3af SHA1 6114d95307dc85dc97d52e0b6ea513948f590a64 SHA256 a43e83274e9923140abf51c02ce42e05a1961c4b454ef12cf916f1f3a37a26d8
 DIST ruby-enterprise-1.8.6-20090610.tar.gz 7194905 RMD160 812435920f945c9b5be60a25d2a1e4fde12f1dbb SHA1 b82d5301060a5cb99b446392dbdc4c2f9a6dac6b SHA256 8bfb592b22f8d5131c0ea3a54769c75a5b2fba88ba9244a1bc8c0442fa7df417
-EBUILD ruby-enterprise-1.8.6.20090201.ebuild 2936 RMD160 03787502396a0c69a503ebdc79df78b8330a6132 SHA1 abd0401537ec24cb327a1b68e45383abc91d46fe SHA256 a4c28f711aff89968f8dfab7546d9fdec64112120d32aa4ac664fc92601add5b
-EBUILD ruby-enterprise-1.8.6.20090610.ebuild 2885 RMD160 7698ca19f2cd76fba6b9a8e4d133835c09218383 SHA1 04aca79eaee59091cbc95b84409eb7c883455175 SHA256 ad27608c58782f458050851efaf574895b02760c4b54f2504a27776b3eed5133
-MISC ChangeLog 1735 RMD160 4e858538515aba7b39ebcc59f7fd97d93fde4747 SHA1 e86ccec94f532cbb2cd0f2efb1c95ac14d7944b9 SHA256 2e0c6e84dfab30e1c73508013c38cede1b6cc94e3112f807efd396e1035c619e
+EBUILD ruby-enterprise-1.8.6.20090610-r1.ebuild 2811 RMD160 c3b3e25821ac63a2d4565e125cb3c8670ec1f6e1 SHA1 097e72586799755589e691ffed7817899602bcb0 SHA256 ef03b8e580bc3286fbd7946a15b5ca7332be1354181135d98d1dcbc6286976aa
+MISC ChangeLog 2014 RMD160 16e37a007a7255a95522d01498901ce087a89a06 SHA1 c7f5e01439824c336d8b344090474f08c32ee094 SHA256 2f9911492aa21447d084ac1f5d22467b091cc16519c2722486cd6e56e622240e
+MISC metadata.xml 827 RMD160 8d819f198b8bef4b20d73bb746517e5974ba285a SHA1 0a387feac66736b7b626a66ea56e0b607bc2851a SHA256 1f54cf006d2f192797a836a7676e621eb998816beebe1254746e27e5f3f15228
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iD8DBQFKlEIdQW+hXSf0t0IRAnSTAJwIX74VduC03OOaBLhsVWuaEihX5QCfajd1
+pjTMDG4F6ezy6o7/wLz7NCo=
+=8d9n
+-----END PGP SIGNATURE-----
