@@ -2,6 +2,14 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*ruby-enterprise-1.8.6.20090610-r1 (25 Aug 2009)
+
+  25 Aug 2009; Lance Albertson <ramereth@gentoo.org>
+  -ruby-enterprise-1.8.6.20090201.ebuild,
+  -ruby-enterprise-1.8.6.20090610.ebuild,
+  +ruby-enterprise-1.8.6.20090610-r1.ebuild, +metadata.xml:
+  QA Fixes, remove old ebuilds
+
   24 Jun 2009; Lance Albertson <ramereth@gentoo.org> ChangeLog:
   Version bump, remove openssl patch as it appears to have been applied upstream
 
